comment formatting for better readability

--- a/categories/boese.tex
+++ b/categories/boese.tex
@@ -21,52 +21,108 @@
 %
 \titlecard{Böse}%
 %
-\whitecard{Böse}{Kleiderbügel- Abtreibung.}% engl. "Coat hanger abortions"
-\whitecard{Böse}{AIDS.}% engl. "AIDS"
-\whitecard{Böse}{Alice Schwarzer füttern.}% replacement for engl. "Feeding Rosie O'Donnell" -> American comedian, actress, magazine editor, lesbian rights activist
+\whitecard{Böse}{Kleiderbügel- Abtreibung.}%
+% engl. "Coat hanger abortions"
+\whitecard{Böse}{AIDS.}%
+% engl. "AIDS"
+\whitecard{Böse}{Alice Schwarzer füttern.}%
+% replacement for engl. "Feeding Rosie O'Donnell" 
+% -> American comedian, actress, magazine editor, lesbian rights activist
 \whitecard{Böse}{Alle Kekse vor einem AIDS-Spendenlauf essen.}%
-\whitecard{Böse}{Auschwitz.}% engl. "Auschwitz"
-\whitecard{Böse}{Auto- kannibalismus.}% engl. "Autocannibalism"
-\whitecard{Böse}{Die diesjährige Massenschießerei.}% before: Die jährliche Massenhinrichtung - engl. "This year's mass shooting"
-\whitecard{Böse}{Die Homos wegbeten.}% original: Die Schwulen wegwünschen - before: Für das Verschwinden von Schwulen beten - engl. "Praying the gay away"
-\whitecard{Böse}{Ein Fötus.}% engl. "A fetus"
-\whitecard{Böse}{Nekrophilie.}% engl. "Necrophilia"
-\whitecard{Böse}{Eine Pyramide aus abgetrennten Köpfen.}% engl. "A pyramid of severed heads"
-\whitecard{Böse}{Eine Kühlbox voller Organe.}% before: Kühlschrank - engl. "A cooler full of organs""
-\whitecard{Böse}{Ein rüstiger Mongoloid.}% before: starker - engl. "A robust mongoloid"
-\whitecard{Böse}{Erträgliche Transvestiten.}% original: passable
+\whitecard{Böse}{Auschwitz.}%
+% engl. "Auschwitz"
+\whitecard{Böse}{Auto- kannibalismus.}%
+% engl. "Autocannibalism"
+\whitecard{Böse}{Die diesjährige Massenschießerei.}%
+% before: Die jährliche Massenhinrichtung
+% engl. "This year's mass shooting"
+\whitecard{Böse}{Die Homos wegbeten.}%
+% original: Die Schwulen wegwünschen - before: Für das Verschwinden von Schwulen beten
+% engl. "Praying the gay away"
+\whitecard{Böse}{Ein Fötus.}%
+% engl. "A fetus"
+\whitecard{Böse}{Nekrophilie.}%
+% engl. "Necrophilia"
+\whitecard{Böse}{Eine Pyramide aus abgetrennten Köpfen.}%
+% engl. "A pyramid of severed heads"
+\whitecard{Böse}{Eine Kühlbox voller Organe.}%
+% before: Kühlschrank
+% engl. "A cooler full of organs""
+\whitecard{Böse}{Ein rüstiger Mongoloid.}%
+% before: starker
+% engl. "A robust mongoloid"
+\whitecard{Böse}{Erträgliche Transvestiten.}%
+% original: passable
 \whitecard{Böse}{Frauen an einer Abtreibungs-klinik anmachen.}%
-\whitecard{Böse}{Hungersnot.}% engl. "Famine"
-\whitecard{Böse}{Kinder mit Arschkrebs.}% engl. "Kids with ass cancer"
-\whitecard{Böse}{Kindes- missbrauch.}% engl. "Child abuse"
+\whitecard{Böse}{Hungersnot.}%
+% engl. "Famine"
+\whitecard{Böse}{Kinder mit Arschkrebs.}%
+% engl. "Kids with ass cancer"
+\whitecard{Böse}{Kindes- missbrauch.}%
+% engl. "Child abuse"
 \whitecard{Böse}{Kinnhaken.}%
-\whitecard{Böse}{Kreuzigung.}% engl. "Crucifixion"
-\whitecard{Böse}{Lustmuskete.}% before: Männerfleisch -  engl. "Man meat" -> penis slang
+\whitecard{Böse}{Kreuzigung.}%
+% engl. "Crucifixion"
+\whitecard{Böse}{Lustmuskete.}%
+% before: Männerfleisch 
+% engl. "Man meat" -> penis slang
 \whitecard{Böse}{Menschen-fleisch.}%
-\whitecard{Böse}{Amputierte.}% before: Menschen mit Amputationen - engl. "Amputees"
-\whitecard{Böse}{Eugenetik.}% engl. "Eugenetics" - before: Rassenhygiene -> but is an outdated term of Eugenetik
-\whitecard{Böse}{MechaHitler.}% before: Robo-Hitler - engl. "MechaHitler" -> end boss of Wolfenstein 3D
-\whitecard{Böse}{Schlecht getimte Holocaust-Witze.}% engl. "Poorly-timed Holocaust jokes"
-\whitecard{Böse}{Schwer- behinderte.}% engl. "The profoundly handicapped"
-\whitecard{Böse}{Teile eines toten Anhalters.}% engl. "Chunks of dead hitchhiker"
-\whitecard{Böse}{Tote Babies.}% engl. "Dead babies"
-\whitecard{Böse}{Tote Eltern.}% engl. "Dead parents"
+\whitecard{Böse}{Amputierte.}%
+% before: Menschen mit Amputationen
+% engl. "Amputees"
+\whitecard{Böse}{Eugenetik.}%
+% engl. "Eugenetics" - before: Rassenhygiene -> but is an outdated term of Eugenetik
+\whitecard{Böse}{MechaHitler.}%
+% before: Robo-Hitler
+% engl. "MechaHitler" -> end boss of Wolfenstein 3D
+\whitecard{Böse}{Schlecht getimte Holocaust-Witze.}%
+% engl. "Poorly-timed Holocaust jokes"
+\whitecard{Böse}{Schwer- behinderte.}%
+% engl. "The profoundly handicapped"
+\whitecard{Böse}{Teile eines toten Anhalters.}%
+% engl. "Chunks of dead hitchhiker"
+\whitecard{Böse}{Tote Babies.}%
+% engl. "Dead babies"
+\whitecard{Böse}{Tote Eltern.}%
+% engl. "Dead parents"
 \whitecard{Böse}{Weiße mit Afros.}%
 \whitecard{Böse}{Zwergenwerfen.}%
-\whitecard{Böse}{Totschlag mittels Fahrzeug.}% before: vehikulärer Massenmord -> vehikulär is not a German word - original: Körperverletzung mit einem Fahrzeug - engl. "Vehicular manslaughter" 
-\whitecard{Böse}{Fahrlässige Tötung.}% alternative and translational pun to engl. "Vehicular manslaughther"
-\whitecard{Böse}{Afrikanische Kinder.}% engl. "African children"
-\whitecard{Böse}{Eine Windmühle voller Leichen.}% engl. "A windmill full of corpses"
-\whitecard{Böse}{Einen Scheiß um die Dritte Welt scheren.}% engl. "Not giving a shit about the Third World"
-\whitecard{Böse}{Skalps von weißen Männern.}% engl. "White-man skalps"
-\whitecard{Böse}{Weiße Privilegiertheit.}% before: Privilegien der Weißen - engl. "White privilege"
-\whitecard{Böse}{Zivile Opfer.}% before: Verlust von Zivilisten - engl. "Civilian casualties"
-\whitecard{Böse}{Lepra.}% engl. "Leprosy"
-\whitecard{Böse}{Harakiri.}% engl. "Seppuku"
-\whitecard{Böse}{Ethnische Säuberung.}% engl. "Ethnic cleansing"
-\whitecard{Böse}{Feld-amputationen.}% before: Kriegsbedingte - engl. "Battlefield amputations"
+\whitecard{Böse}{Totschlag mittels Fahrzeug.}%
+% before: vehikulärer Massenmord -> vehikulär is not a German word - original: Körperverletzung mit einem Fahrzeug
+% engl. "Vehicular manslaughter" 
+\whitecard{Böse}{Fahrlässige Tötung.}%
+% alternative and translational pun to engl. "Vehicular manslaughther"
+\whitecard{Böse}{Afrikanische Kinder.}%
+% engl. "African children"
+\whitecard{Böse}{Eine Windmühle voller Leichen.}%
+% engl. "A windmill full of corpses"
+\whitecard{Böse}{Einen Scheiß um die Dritte Welt scheren.}%
+% engl. "Not giving a shit about the Third World"
+\whitecard{Böse}{Skalps von weißen Männern.}%
+% engl. "White-man skalps"
+\whitecard{Böse}{Weiße Privilegiertheit.}%
+% before: Privilegien der Weißen
+% engl. "White privilege"
+\whitecard{Böse}{Zivile Opfer.}%
+% before: Verlust von Zivilisten
+% engl. "Civilian casualties"
+\whitecard{Böse}{Lepra.}%
+% engl. "Leprosy"
+\whitecard{Böse}{Harakiri.}%
+% engl. "Seppuku"
+\whitecard{Böse}{Ethnische Säuberung.}%
+% engl. "Ethnic cleansing"
+\whitecard{Böse}{Feld-amputationen.}%
+% before: Kriegsbedingte
+% engl. "Battlefield amputations"
 %
-\blackcard{1}{Böse}{Das Leben der Indianer wurde für immer verändert, als der Weiße Mann ihnen \underl zeigte.}% engl. "Life for American Indians was forever changed when the White Man introduced them to ___"
-\blackcard{1}{Böse}{Was haben die USA den Kindern in Afghanistan aus dem Flugzeug abgeworden?}% original: im Luftraum von - engl. "What did the U.A. airdrop to the children of Afghanistan?"
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+\blackcard{1}{Böse}{Das Leben der Indianer wurde für immer verändert, als der Weiße Mann ihnen \underl zeigte.}%
+% engl. "Life for American Indians was forever changed when the White Man introduced them to ___"
+\blackcard{1}{Böse}{Was haben die USA den Kindern in Afghanistan aus dem Flugzeug abgeworden?}%
+% original: im Luftraum von
+% engl. "What did the U.A. airdrop to the children of Afghanistan?"
 \blackcard{1}{Böse}{Menschen, die aussehen wie \underl.}%
-\blackcard{1}{Böse}{Weiße mögen \underl.}% engl. "White people like ___"
+\blackcard{1}{Böse}{Weiße mögen \underl.}%
+% engl. "White people like ___"
