--- a/categories/eklig.tex
+++ b/categories/eklig.tex
@@ -21,27 +21,58 @@
 %
 \titlecard{Eklig}%
 %
-\whitecard{Eklig}{Arschlöcher als Augen haben.}% engl. "Having anuses for eyes"
-\whitecard{Eklig}{Brennen beim Kacken.}% before: brennende Scheiße engl. "Fiery poops"
-\whitecard{Eklig}{Ein Ball aus Ohrenschmalz, Sperma und Fußnägeln.}% engl. "A ball of earwax, semen, and toenail clippings"
-\whitecard{Eklig}{Ein bisschen einnässen.}% before: pinkeln - engl. "Peeing a little bit"
+\whitecard{Eklig}{Arschlöcher als Augen haben.}%
+% engl. "Having anuses for eyes"
+\whitecard{Eklig}{Brennen beim Kacken.}%
+% before: brennende Scheiße engl. "Fiery poops"
+\whitecard{Eklig}{Ein Ball aus Ohrenschmalz, Sperma und Fußnägeln.}%
+% engl. "A ball of earwax, semen, and toenail clippings"
+\whitecard{Eklig}{Ein bisschen einnässen.}%
+% before: pinkeln
+% engl. "Peeing a little bit"
 \whitecard{Eklig}{Ein heimlicher Arschkratzer.}%
 \whitecard{Eklig}{Einnässen.}%
-\whitecard{Eklig}{Ein Kind festhalten und es komplett vollfurzen.}% engl. "Holding down a child and farting all over him"
-\whitecard{Eklig}{Furzen und dann weggehen.}% before: dann weglaufen - engl "Farting and walking away"
-\whitecard{Eklig}{Fressen und wieder auskotzen.}% alternative: Sich überfressen und dann abführen - engl. "Bingeing and purging"
-\whitecard{Eklig}{``Pooping back and forth. Forever!''}% reference: "Me and You and Everyone We Know" - engl. "Pooping back and forth. Forever."
-\whitecard{Eklig}{Sich einkacken.}% original: einscheißen
-\whitecard{Eklig}{Smegma.}% engl. "Smegma"
-\whitecard{Eklig}{Tod durch Durchfall.}% engl. "Dying of dysentery"
-\whitecard{Eklig}{Unterwäsche wenden, um sie nicht waschen zu müssen.}% original: falsch herum tragen
-\whitecard{Eklig}{Würgen, ohne dass was kommt.}% engl. "Dry heaving"
-\whitecard{Eklig}{Ein endloser Strom aus Diarrhoe.}% before: Durchfall. Für immer. - engl. "An endless stream of diarrhea"
-\whitecard{Eklig}{Zwei Zwerge, die in einen Eimer scheißen.}% before: Kleinwüchsige - engl. "Two midgets shitting into a bucket"
-\whitecard{Eklig}{Thomas Gottschalks weicher, beschissener Körper.}% before: verschrumpelter - replacement for engl. "Rush Limbaugh's soft, shitty body"
-\whitecard{Eklig}{Vollgeschissene Windeln.}% engl. "Poopy diapers"
-\whitecard{Eklig}{Wenn du furzt und ein bisschen was mit rauskommt.}% engl. "When you fart and a little bit comes out"
-\whitecard{Eklig}{Einen Rülpser erwarten und stattdessen auf den Boden kotzen.}% engl. "Expecting a burp and vomiting on the floor"
-\whitecard{Eklig}{Fotzenfürze.}% original: Vaginalfürze - engl. "Queefing"
+\whitecard{Eklig}{Ein Kind festhalten und es komplett vollfurzen.}%
+% engl. "Holding down a child and farting all over him"
+\whitecard{Eklig}{Furzen und dann weggehen.}%
+% before: dann weglaufen
+% engl. "Farting and walking away"
+\whitecard{Eklig}{Fressen und wieder auskotzen.}%
+% alternative: Sich überfressen und dann abführen
+% engl. "Bingeing and purging"
+\whitecard{Eklig}{``Pooping back and forth. Forever!''}%
+% engl. "Pooping back and forth. Forever."
+% reference: "Me and You and Everyone We Know"
+\whitecard{Eklig}{Sich einkacken.}%
+% original: einscheißen
+\whitecard{Eklig}{Smegma.}%
+% engl. "Smegma"
+\whitecard{Eklig}{Tod durch Durchfall.}%
+% engl. "Dying of dysentery"
+\whitecard{Eklig}{Unterwäsche wenden, um sie nicht waschen zu müssen.}%
+% original: falsch herum tragen
+\whitecard{Eklig}{Würgen, ohne dass was kommt.}%
+% engl. "Dry heaving"
+\whitecard{Eklig}{Ein endloser Strom aus Diarrhoe.}%
+% before: Durchfall. Für immer.
+% engl. "An endless stream of diarrhea"
+\whitecard{Eklig}{Zwei Zwerge, die in einen Eimer scheißen.}%
+% before: Kleinwüchsige
+% engl. "Two midgets shitting into a bucket"
+\whitecard{Eklig}{Thomas Gottschalks weicher, beschissener Körper.}%
+% before: verschrumpelter 
+% replacement for engl. "Rush Limbaugh's soft, shitty body"
+\whitecard{Eklig}{Vollgeschissene Windeln.}%
+% engl. "Poopy diapers"
+\whitecard{Eklig}{Wenn du furzt und ein bisschen was mit rauskommt.}%
+% engl. "When you fart and a little bit comes out"
+\whitecard{Eklig}{Einen Rülpser erwarten und stattdessen auf den Boden kotzen.}%
+% engl. "Expecting a burp and vomiting on the floor"
+\whitecard{Eklig}{Fotzenfürze.}%
+% original: Vaginalfürze
+% engl. "Queefing"
 %
-\blackcard{1}{Eklig}{Was lässt mich unkontrolliert furzen?}% engl. "What gives me uncontrollable gas?"
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+\blackcard{1}{Eklig}{Was lässt mich unkontrolliert furzen?}%
+% engl. "What gives me uncontrollable gas?"
