--- a/categories/politik.tex
+++ b/categories/politik.tex
@@ -21,40 +21,71 @@
 %
 \titlecard{Politik}%
 %
-\whitecard{Politik}{Ihre Majestät, Queen\newline Elizabeth II.}% original: königliche Hoheit - engl. "Her Majesty, Queen Elizabeth II."
+\whitecard{Politik}{Ihre Majestät, Queen\newline Elizabeth II.}%
+% original: königliche Hoheit
+% engl. "Her Majesty, Queen Elizabeth II."
 \whitecard{Politik}{Angela Merkel.}%
 \whitecard{Politik}{Barack Obama.}%
-\whitecard{Politik}{CDU-Wähler.}% replacement for Republikaner - engl. "Republicans"
+\whitecard{Politik}{CDU-Wähler.}%
+% replacement for Republikaner
+% engl. "Republicans"
 \whitecard{Politik}{Die priviligierte Oberklasse.}%
-\whitecard{Politik}{Die Terroristen.}% engl. "The terrorists"
+\whitecard{Politik}{Die Terroristen.}%
+% engl. "The terrorists"
 \whitecard{Politik}{Donald Trump.}%
-\whitecard{Politik}{Frank-Walter Steinmeier.}% replacement for: "Aaron Burr" or "Ronald Reagan"
-\whitecard{Politik}{Helmut Schmidt.}% replacement for: "Aaron Burr" or "Ronald Reagan"
-\whitecard{Politik}{Helmut Kohl.}% replacement for: "Aaron Burr" or "Ronald Reagan"
-\whitecard{Politik}{Der ehemalige US-Präsident George W. Bush.}% engl. "Former President George W. Bush"
-\whitecard{Politik}{Italiener.}% engl. "Italians"
-\whitecard{politik}{Michelle Obamas Arme.}% engl. "Michelle Obama's arms" -> see also "Angela Merkels Oberarme"
-\whitecard{Politik}{Nazis.}% engl. "Nazis"
-\whitecard{Politik}{Ottfried Fischer ernähren.}% replacement for engl. "Feeding Rosie O'Donnell" -> American comedian, actress, magazine editor, lesbian rights activist
+\whitecard{Politik}{Frank-Walter Steinmeier.}%
+% replacement for: "Aaron Burr" or "Ronald Reagan"
+\whitecard{Politik}{Helmut Schmidt.}%
+% replacement for: "Aaron Burr" or "Ronald Reagan"
+\whitecard{Politik}{Helmut Kohl.}%
+% replacement for: "Aaron Burr" or "Ronald Reagan"
+\whitecard{Politik}{Der ehemalige US-Präsident George W. Bush.}%
+% engl. "Former President George W. Bush"
+\whitecard{Politik}{Italiener.}%
+% engl. "Italians"
+\whitecard{politik}{Michelle Obamas Arme.}%
+% engl. "Michelle Obama's arms" -> see also "Angela Merkels Oberarme"
+\whitecard{Politik}{Nazis.}%
+% engl. "Nazis"
+\whitecard{Politik}{Ottfried Fischer ernähren.}%
+% replacement for engl. "Feeding Rosie O'Donnell" 
+% -> American comedian, actress, magazine editor, lesbian rights activist
 \whitecard{Politik}{Stalin.}%
-\whitecard{Politik}{Weltfrieden.}% engl. "World peace"
-\whitecard{Politik}{Arbeitsplätze.}% engl. "Jobs"
-\whitecard{Politik}{Die Euro-Krise.}% replacement for engl. "Great Depression" -> USA 1929 -> Black Friday...
+\whitecard{Politik}{Weltfrieden.}%
+% engl. "World peace"
+\whitecard{Politik}{Arbeitsplätze.}%
+% engl. "Jobs"
+\whitecard{Politik}{Die Euro-Krise.}%
+% replacement for engl. "Great Depression" -> USA 1929 -> Black Friday...
 \whitecard{Politik}{Sigmar Gabriel.}%
 \whitecard{Politik}{Helmut Kohl.}%
 \whitecard{Politik}{Arbeitslose.}%
 \whitecard{Politik}{Der hart arbeitende Türke.}%
-\whitecard{Politik}{Angela Merkels Füße.}% supplementary replacement for engl. "Michelle Obama's Arms"
+\whitecard{Politik}{Angela Merkels Füße.}%
+% supplementary replacement for engl. "Michelle Obama's Arms"
 \whitecard{Politik}{Bayern.}%
-\whitecard{Politik}{Das Patriarchat.}% engl. "The patriarchy"
-\whitecard{Politik}{Der Zorn Vladimir Putins.}% engl. "The wrath of Vladimir Putin" -> confrontation between Putin and Khordorkovsky 2003, leading to arrests and fake trials
-\whitecard{Politik}{Beweise vernichten.}% engl. "Destroying the evidence"
+\whitecard{Politik}{Das Patriarchat.}%
+% engl. "The patriarchy"
+\whitecard{Politik}{Der Zorn Vladimir Putins.}%
+% engl. "The wrath of Vladimir Putin" 
+% -> confrontation between Putin and Khordorkovsky 2003, leading to arrest and fake trials
+\whitecard{Politik}{Beweise vernichten.}%
+% engl. "Destroying the evidence"
+%
 % Replacement for "Sarah Palin"? -> politician, commentator, author, ninth Governor of Alaska 
 % Replacement for "Dick Cheney"? -> former USA Vice President
 % Replacement for "Joe Biden"? -> former USA Vice President
 %
-\blackcard{1}{Politik}{Und gleich in der Oliver Geissen Show: \newline ``Hilfe, mein Sohn ist \underl!''}% before: Heute-Journal - engl. "Today on Maury: ``Help! My son is___``"
-\blackcard{1}{Politik}{Es ist eine Schande, dass Kinder heutzutage alle mit \underl in Berührung kommen.}% engl. "It's a pity that kids these days are all getting involved with ___"
-\blackcard{1}{Politik}{Während sich andere Länder einen ``Wettlauf ins All'' lieferten, steckte die französische Regierung Millionen in die Erforschung von \underl.}% original: Während die USA und Sovietunion um den Mond kämpften, steckte die mexikanische Rgierung Millionen von Pesos in die Erfroschung von ... - engl. "While the United States raced the Soviet Union to the moon, the Mexican government funneled millions of pesos into research on ___"
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+\blackcard{1}{Politik}{Und gleich in der Oliver Geissen Show: \newline ``Hilfe, mein Sohn ist \underl!''}%
+% before: Heute-Journal
+% engl. "Today on Maury: ``Help! My son is___``"
+\blackcard{1}{Politik}{Es ist eine Schande, dass Kinder heutzutage alle mit \underl in Berührung kommen.}%
+% engl. "It's a pity that kids these days are all getting involved with ___"
+\blackcard{1}{Politik}{Während sich andere Länder einen ``Wettlauf ins All'' lieferten, steckte die französische Regierung Millionen in die Erforschung von \underl.}%
+% original: Während die USA und Sovietunion um den Mond kämpften, steckte die mexikanische Rgierung Millionen von Pesos in die Erfroschung von ...
+% engl. "While the United States raced the Soviet Union to the moon, the Mexican government funneled millions of pesos into research on ___"
 \blackcard{2}{Politik}{Gerüchten zufolge ist \underl  gefüllt mit \underl  Vladimir Putins Lieblingsessen.}%
-\blackcard{1}{Politik}{Was bevorzugt Donald Trump?}% original: Dick Cheney - former USA Vice President
+\blackcard{1}{Politik}{Was bevorzugt Donald Trump?}%
+% original: Dick Cheney -> former USA Vice President
