--- a/categories/religion.tex
+++ b/categories/religion.tex
@@ -21,31 +21,59 @@
 %
 \titlecard{Religion}%
 %
-\whitecard{Religion}{72 Jungfrauen.}% engl. "72 virgins"
-\whitecard{Religion}{Alle Wiener Sängerknaben.}% before: Der gesamte Chor eines Mormonen-Gotteshauses - replacement of engl. "The entire Mormon Tabernacle Choir" -> name
-\whitecard{Religion}{Den Antichrist gebären.}% engl. "Giving birth to the Antichrist"
-\whitecard{Religion}{Das Blut Christi.}% before: von Jesus Christus - engl. "The Blood of Chist"
+\whitecard{Religion}{72 Jungfrauen.}%
+% engl. "72 virgins"
+\whitecard{Religion}{Alle Wiener Sängerknaben.}%
+% before: Der gesamte Chor eines Mormonen-Gotteshauses - replacement of engl. "The entire Mormon Tabernacle Choir" -> name
+\whitecard{Religion}{Den Antichrist gebären.}%
+% engl. "Giving birth to the Antichrist"
+\whitecard{Religion}{Das Blut Christi.}%
+% before: von Jesus Christus
+% engl. "The Blood of Chist"
 \whitecard{Religion}{Das Rote Meer teilen.}%
-\whitecard{Religion}{Der Papst.}% engl. "The Pope"
-\whitecard{Religion}{Der Pfarrer Dr. Martin Luther King, Jr.}% engl. "The Rev. Dr. Martin Luther King, Jr."
-\whitecard{Religion}{Der Tag des Jüngsten Gerichts.}% before: Das Jüngste Gericht
+\whitecard{Religion}{Der Papst.}%
+% engl. "The Pope"
+\whitecard{Religion}{Der Pfarrer Dr. Martin Luther King, Jr.}%
+% engl. "The Rev. Dr. Martin Luther King, Jr."
+\whitecard{Religion}{Der Tag des Jüngsten Gerichts.}%
+% before: Das Jüngste Gericht
 \whitecard{Religion}{Der Tanz der Zahnfee.}%
-\whitecard{Religion}{Der Teufel höchst selbst.}% engl. "The Devil himself"
-\whitecard{Religion}{Die Entrückung.}% engl. "The rapture" -> rise into heavenly spheres
-\whitecard{Religion}{Die Heilige Schrift.}% before: Bibel - engl. "The Holy Bible"
-\whitecard{Religion}{Die Amisch.}% engl. "The Amish"
-\whitecard{Religion}{Die Juden.}% engl. "The Jews"
-\whitecard{Religion}{Die Pfadfinder.}% engl. "The Boy Scouts of America"
-\whitecard{Religion}{Die wahre Bedeutung von Weihnachten.}% engl. "The true meaning of Christmas"
+\whitecard{Religion}{Der Teufel höchst selbst.}%
+% engl. "The Devil himself"
+\whitecard{Religion}{Die Entrückung.}%
+% engl. "The rapture" -> rise into heavenly spheres
+\whitecard{Religion}{Die Heilige Schrift.}%
+% before: Bibel
+% engl. "The Holy Bible"
+\whitecard{Religion}{Die Amisch.}%
+% engl. "The Amish"
+\whitecard{Religion}{Die Juden.}%
+% engl. "The Jews"
+\whitecard{Religion}{Die Pfadfinder.}%
+% engl. "The Boy Scouts of America"
+\whitecard{Religion}{Die wahre Bedeutung von Weihnachten.}%
+% engl. "The true meaning of Christmas"
 \whitecard{Religion}{Ein Zigeunerfluch.}%
-\whitecard{Religion}{Gott.}% engl. "God"
-\whitecard{Religion}{Jüdische Verbindungen.}% engl. "Jewish fraternities"
-\whitecard{Religion}{Meine Seele.}% engl. "My soul"
-\whitecard{Religion}{Messdiener.}% engl. "Altar boys"
-\whitecard{Religion}{Mohammed (Geheiligt sei sein Name!)}% engl. "Muhammad (Praise Be Unto Him)"
+\whitecard{Religion}{Gott.}%
+% engl. "God"
+\whitecard{Religion}{Jüdische Verbindungen.}%
+% engl. "Jewish fraternities"
+\whitecard{Religion}{Meine Seele.}%
+% engl. "My soul"
+\whitecard{Religion}{Messdiener.}%
+% engl. "Altar boys"
+\whitecard{Religion}{Mohammed (Geheiligt sei sein Name!)}%
+% engl. "Muhammad (Praise Be Unto Him)"
 \whitecard{Religion}{Scientology.}%
 %
-\blackcard{1}{Religion}{Hier ist die Kirche \newline Und dort ist der Kirchturm \newline Öffne die Tür und dort ist \underl.}% engl. "Here is the church Here is the steeple Open the doors And there is ___" -> children's nursery rhyme
-\blackcard{1}{Religion}{Als der Pharaoh seine Meinung nicht änderte, beschwor Moses eine Plage von \underl herauf.}% engl. "When Pharao remained unmoved, Moses called down a Plague of ___"
-\blackcard{1}{Religion}{Auf was verzichte ich in der Fastenzeit?.}% engl. "What am I giving up for Lent?"
-\blackcard{1}{Religion}{Statt der Rute bringt der Weihnachtsmann unartigen Kindern jetzt \underl.}% original: Kohle ... bösen Kindern... - engl. "Instead of coal, Santa now gives the bad chrildren ___"
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+\blackcard{1}{Religion}{Hier ist die Kirche \newline Und dort ist der Kirchturm \newline Öffne die Tür und dort ist \underl.}%
+% engl. "Here is the church Here is the steeple Open the doors And there is ___" -> children's nursery rhyme
+\blackcard{1}{Religion}{Als der Pharaoh seine Meinung nicht änderte, beschwor Moses eine Plage von \underl herauf.}%
+% engl. "When Pharao remained unmoved, Moses called down a Plague of ___"
+\blackcard{1}{Religion}{Auf was verzichte ich in der Fastenzeit?.}%
+% engl. "What am I giving up for Lent?"
+\blackcard{1}{Religion}{Statt der Rute bringt der Weihnachtsmann unartigen Kindern jetzt \underl.}%
+% original: Kohle ... bösen Kindern...
+% engl. "Instead of coal, Santa now gives the bad chrildren ___"
