--- a/commands.tex
+++ b/commands.tex
@@ -138,7 +138,7 @@
 			\fi%
 		}%
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-	% White Cards %
+	% Black Cards %
 	\setcounter{CntList}{0}%
 	\whiledo {\value{CntList} < \value{CntBlack}}%
 		{%
