minor typos and clarifications

--- a/categories/basis.tex
+++ b/categories/basis.tex
@@ -685,7 +685,7 @@
 % before: Wie motivieren die Lehrer an Hauptschulen ihre Schüler, zu lernen? - original: in Großstädten OR in Problembezirken
 % engl. "What's Teach for America using to inspire inner city students to succeed?"
 \blackcard{1}{Basis}{\underl. Es ist eine Falle!}%
-% engl. "___. It's a trap!"
+% engl. "___. It's a trap!" -> probably reference from Star Wars 
 \blackcard{1}{Basis}{Was ist am meisten emo?}%
 % engl. "What's the most emo?"
 \blackcard{1}{Basis}{Was habe ich aus Mexiko mitgebracht?}%
