--- a/categories/drogen.tex
+++ b/categories/drogen.tex
@@ -40,4 +40,4 @@
 % engl. "What's my anti-drug?"
 \blackcard{2}{Drogen}{Als ich auf einem LSD-Trip war, verwandelte sich \underl in \underl.}%
 % before: Acid
-% engl. "When I was tripping an ocid, ___ turned into ___"
+% engl. "When I was tripping on acid, ___ turned into ___"
