--- a/categories/fsk16.tex
+++ b/categories/fsk16.tex
@@ -64,7 +64,7 @@
 \whitecard{FSK 16}{Harald Schmidts Hoden im Vorhang verfangen.}%
 \whitecard{FSK 16}{Hodentorsion.}%
 % engl. "Tersticular torsion"
-\whitecard{FSK 16}{Arschfreie Lederhose.}%
+\whitecard{FSK 16}{Arschfreie Lederhosen.}%
 % before: Burschen ohne Ärsche
 % engl. "Assless chaps"
 \whitecard{FSK 16}{Vorher rausziehen.}%
