--- a/categories/kultur.tex
+++ b/categories/kultur.tex
@@ -111,7 +111,7 @@
 % engl. "But before I kill you, Mr. Bond, I must show you ___"
 \blackcard{1}{Kultur}{Diese Saison auf dem Broadway: \underl: \newline Das Musical.}%
 % engl. "Coming to Broadway this season, ___ : The Musical"
-\blackcard{2}{kultur}{Hier kommt das nächste fantastische Superhelden-Gehilfen-Duo! \newline Es sind \underl und \underl!}%
+\blackcard{2}{kultur}{Hier kommt das nächste fantastische Superhelden/\newline Gehilfen-Duo! \newline Es sind \underl und \underl!}%
 % engl. "Introducing the amazing superhero/ sidekick duo! It's ___ and ___!"
 \blackcard{1}{Kultur}{Demnächst erscheint von J.K Rowling: \newline Harry Potter und die Kammer des \underl.}%
 % engl. "Next from J.K. Rowling: Harry Potter and the Chamber of ___"
