--- a/categories/werbung.tex
+++ b/categories/werbung.tex
@@ -43,8 +43,7 @@
 % engl. "AXE Body Spray" -> phrase is used in German TV ads as well
 \whitecard{Werbung}{Der Fruchttieger\SymbReg.}%
 % replacement for engl. "The Kool-Aid Man"
-\whitecard{Werbung}{Dibadibadu.}%g.}%
-% replacement for engl. "The Kool-Aid Man"
+\whitecard{Werbung}{Dibadibadu.}%
 \whitecard{Werbung}{Happy Hippos.}%
 \whitecard{Werbung}{McDonalds Einmaleins.}%
 \whitecard{Werbung}{Meister Proper Sauberkraft.}%
