"Martin Luther King" -> "Martin Luther", because Martin Luther King is a duplicate -> see "Der Pfarrer Dr. Martin Luther King, Jr."

--- a/categories/geschichte.tex
+++ b/categories/geschichte.tex
@@ -63,7 +63,7 @@
 \whitecard{Geschichte}{In Polen einmarschieren.}%
 % engl. "Invading Poland"
 \whitecard{Geschichte}{Gandhi.}%
-\whitecard{Geschichte}{Martin Luther King.}%
+\whitecard{Geschichte}{Martin Luther.}%
 \whitecard{Geschichte}{Fritz Haarmann.}%
 % replacement for "John Wilkes Booth" -> Killer of Abraham Lincoln
 %
