change word order of "weisen schwarzen alten Mann." -> "weisen alten schwarzen"

--- a/categories/basis.tex
+++ b/categories/basis.tex
@@ -217,7 +217,7 @@
 \whitecard{Basis}{Ein Pantomime mit Schlaganfall.}%
 % before: Herzinfarkt
 % engl. "A mime having a stroke"
-\whitecard{Basis}{Ein Ratschlag von einem weisen schwarzen alten Mann.}%
+\whitecard{Basis}{Ein Ratschlag von einem weisen alten schwarzen Mann.}%
 % engl "Advice from a wise, old black man"
 \whitecard{Basis}{Ein zigarre-rauchender Affe.}%
 % engl. "A monkey smoking a cigar"
