Fixes Prior99/cah-fullformat-german#3 - "Overfull \hbox" * adjusting text padding * accordingly, adjusting the text flow of some phrases.
PR Prior99/cah-fullformat-german#8

--- a/categories/basis.tex
+++ b/categories/basis.tex
@@ -31,7 +31,7 @@
 % replacement for engl. "A can of whoop-ass"
 \whitecard{Basis}{An den Rand gedrängt werden.}%
 % engl. "Being marginalized"
-\whitecard{Basis}{Dinge anlecken, um sie für sich zu bean-\newline spruchen.}%
+\whitecard{Basis}{Dinge anlecken, um sie für sich zu beanspruchen.}%
 % engl. "Licking things to claim them as your own"
 \whitecard{Basis}{Die Furcht selbst.}%
 % engl. "Fear itself"
@@ -58,8 +58,8 @@
 \whitecard{Basis}{In Flammen stehen.}%
 % engl. "Being on Fire"
 \whitecard{Basis}{Charisma.}%
-\whitecard{Basis}{Dieses Ding, das deine Muskeln mit Elektroschocks aufbaut.}%
-\whitecard{Basis}{Dunkle und mysteriöse Mächte, die man nicht kontrollieren kann.}%
+\whitecard{Basis}{Dieses Ding, das deine Muskeln mit Elektro-\newline schocks aufbaut.}%
+\whitecard{Basis}{Dunkle und mysteriöse Mächte, die man nicht kontrol-\newline lieren kann.}%
 % engl. "Dark and mysterious forces beyond our control"
 \whitecard{Basis}{Das Ende der Straße.}%
 % alternative to engl. "Road Head"
@@ -198,7 +198,7 @@
 \whitecard{Basis}{Ein übles Mundwerk.}%
 % original: loses - alternative: schmutziges
 % engl. "A foul mouth"
-\whitecard{Basis}{Einmal richtig dran schnuppern.}%
+\whitecard{Basis}{Einmal\newline richtig dran schnuppern.}%
 \whitecard{Basis}{Ein Mann mittleren Alters auf Rollschuhen.}%
 % engl. "A middle-aged man on roller skates"
 \whitecard{Basis}{Ein Nerd-Spasti.}%
@@ -465,7 +465,7 @@
 % engl. "Bitches"
 \whitecard{Basis}{Schlechte Lebens-entscheidungen.}%
 % engl. "Poor life choices"
-\whitecard{Basis}{Schreckliche Laser-Haarent-fernungs-unfälle.}%
+\whitecard{Basis}{Schreckliche Laser-Haarent-fernungsunfälle.}%
 % engl. "Horrifying laser hair removal accidents"
 \whitecard{Basis}{Schwarze.}%
 % engl. "Brown people" AND engl. "Black people"
@@ -511,7 +511,7 @@
 % engl. "Prancing"
 \whitecard{Basis}{Teambildungs- maßnahmen.}%
 % original: -übungen
-\whitecard{Basis}{Teenager- schwangerschaft.}%
+\whitecard{Basis}{Teenager-schwanger-schaft.}%
 % engl. "Teenage pregnancy"
 \whitecard{Basis}{Thermodynamik.}%
 \whitecard{Basis}{Thermonukleare Detonation.}%
@@ -561,7 +561,7 @@
 \whitecard{Basis}{Zuhälter.}%
 \whitecard{Basis}{Zurückgeben.}%
 % engl. "Take-backsies" -> children slang for giving something back that was given to you
-\whitecard{Basis}{Rassisitisch voreingenommene Fragen in der Aufnahmeprüfung.}%
+\whitecard{Basis}{Rassisitisch voreingenommene Fragen in der Aufnahme-prüfung.}%
 % engl. "Racially-biased SAT questions"
 \whitecard{Basis}{Ein rechtschaffender Cop, der nichts zu verlieren hat}%
 \whitecard{Basis}{Sexting}%
