--- a/categories/boese.tex
+++ b/categories/boese.tex
@@ -41,7 +41,7 @@
 % engl. "A fetus"
 \whitecard{Böse}{Nekrophilie.}%
 % engl. "Necrophilia"
-\whitecard{Böse}{Eine Pyramide aus abgetrennten Köpfen.}%
+\whitecard{Böse}{Eine Pyramide aus abge-\newline trennten Köpfen.}%
 % engl. "A pyramid of severed heads"
 \whitecard{Böse}{Eine Kühlbox voller Organe.}%
 % engl. "A cooler full of organs""
@@ -49,7 +49,7 @@
 % engl. "A robust mongoloid"
 \whitecard{Böse}{Erträgliche Transvestiten.}%
 % original: passable
-\whitecard{Böse}{Frauen an einer Abtreibungs-klinik anmachen.}%
+\whitecard{Böse}{Frauen an einer Abtreibungs-klinik an-\newline machen.}%
 \whitecard{Böse}{Hungersnot.}%
 % engl. "Famine"
 \whitecard{Böse}{Kinder mit Arschkrebs.}%
