--- a/categories/fsk16.tex
+++ b/categories/fsk16.tex
@@ -141,7 +141,7 @@
 % engl. "A recent laboratory shows that undergraduates have 50% less sex after being exposed to ___"
 \blackcard{1}{FSK 16}{Ich denke während dem Sex gerne an \underl.}%
 % engl. "During sex, I like to think about ___"
-\blackcard{2}{FSK 16}{Sie sagten, wir wären verrückt. Sie sagten, wir könnten \underl nicht in \underl stecken. Sie lagen falsch.}%
+\blackcard{2}{FSK 16}{Sie sagten, wir wären verrückt.\newline Sie sagten, wir könnten \underl nicht in \underl stecken.\newline Sie lagen falsch.}%
 % engl. "They said we were crazy. They said we couldn't put ___ inside of ___. They were wrong"
 \blackcard{1}{FSK 16}{Wie verlor ich meine Jungfräulichkeit?}%
 % engl. "How did I lose my virginity?"
