--- a/categories/religion.tex
+++ b/categories/religion.tex
@@ -72,6 +72,6 @@
 % engl. "When Pharao remained unmoved, Moses called down a Plague of ___"
 \blackcard{1}{Religion}{Auf was verzichte ich in der Fastenzeit?.}%
 % engl. "What am I giving up for Lent?"
-\blackcard{1}{Religion}{Statt der Rute bringt der Weihnachtsmann unartigen Kindern jetzt \underl.}%
+\blackcard{1}{Religion}{Statt der Rute bringt der Weihnachts-\newline mann unartigen Kindern jetzt \underl.}%
 % original: Kohle ... bösen Kindern...
 % engl. "Instead of coal, Santa now gives the bad chrildren ___"
